@@ -4,6 +4,9 @@ Version 1.5.0+svn:
  * terrains:
    * Reorganisation of the terrain macros including more consistent image naming.
      The old macros are kept for now for compatibility.
+ * miscellaneous and bug fixes:
+   * Implemented the option to use the mouse selection clipboard in X11
+     the new widget library also uses it.
 
 Version 1.5.0:
  * campaigns:
